# compas_convert

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  conftest.py  pyproject.toml  setup.cfg  setup.py  tasks.py
.github/workflows/: release.yaml  test-build-docs-release.yaml
docs/: conversion_diagram.dot
src/compas_convert/: __init__.py  native.py
src/compas_convert/install/: rhino.py
src/compas_convert/rhino/: __init__.py  compas_to_rhino.py  install.py  rhino_to_compas.py
src/compas_convert/rhino/grasshopper_components/Cc_Convert/: code.py  icon.psd  metadata.json
src/compas_convert/smart_converter/: __init__.py  smart_converter.py  type_converter_match.py
src/compas_convert/universal_converter/: __init__.py  type_converter_match.py  universal_converter.py
tests/: test_convert.ghx  test_import.py
tests/rhino/: test_compas_to_rhino.py  test_rhino_to_compas.py
