[metadata]
name = compas_convert

description = Robot localization using external measuring device (total station).
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/tetov/compas_convert
project_urls =
    Repository = https://github.com/tetov/compas_convert
    Issues = https://github.com/tetov/compas_convert/issues
author = Anton Tetov Johansson
maintainer = Anton Tetov Johansson
maintainer_email = anton@tetov.xyz
keywords = geometry
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Scientific/Engineering
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: IronPython
license = MIT license
license_file = LICENSE

[options]
package_dir =
    =src
packages=find:
zip_safe = False
include_package_data = True
install_requires =
    compas >= 0.17.2, < 1.7
python_requires = >=3.7

[options.package_data]
* = py.typed

[options.packages.find]
where=src

[options.extras_require]
dev =
    black >= 20
    flake8
    importlib_metadata;python_version<'3.8'
    invoke >=1.5.0
    reorder-python-imports >= 2.5.0
    mypy >= 0.790
    pydocstyle[toml]
    pytest >= 6
    setuptools_scm[toml] >= 4.1,< 7.0

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 88
extend-ignore = E203
